# pcitool

./: .bzrignore  .gitignore  BUGS  CMakeLists.txt  Makefile  NOTES  README  README.txt  ToDo  annotated.html  bank.c  bank.h  bank_8c.html  bank_8h.html  bank_8h_source.html  bar_8c.html  bar_8h.html  bar_8h_source.html  classes.html  cli.c  common.mk  config.c  config.h  cpu_8c.html  cpu_8h.html  cpu_8h_source.html  datacpy_8c.html  datacpy_8h.html  datacpy_8h_source.html  debug_8c.html  debug_8h.html  debug_8h_source.html  default.c  default.h  dir_0b5c8f32f3013e7b96dc99509907414c.html  dma.c  dma.h  dma_8c.html  dma_8h.html  dma_8h_source.html  (+234 more)
.github/workflows/: doxygen.yml
apps/: CMakeLists.txt  check_counter.c  compare_to_value.c  heb_strip_bad_values.c  load.sh  lorenzo_ipedma_test.c  pio_test.c  test_multithread.c  xilinx.c  xilinx2.c
cmake/: FindBAZAAR.cmake  build.cmake  tools.cmake  version.cmake
dma/: CMakeLists.txt  ipe.c  ipe.h  ipe_benchmark.c  ipe_private.h  ipe_registers.h  nwl.c  nwl.h  nwl_buffers.h  nwl_defines.h  nwl_dma.h  nwl_engine.c  nwl_engine.h  nwl_engine_buffers.h  nwl_irq.c  nwl_irq.h  nwl_loopback.c  nwl_loopback.h  nwl_private.h  nwl_register.c  nwl_register.h
docs/: Doxyfile  Doxyfile.in  HARDWARE  IPEHARDWARE  README  ToDo
driver/: Makefile  Makefile.in  README  base.c  base.h  common.h  compat.c  compat.h  config.h  debug.h  dev.c  dev.h  int.c  int.h  ioctl.c  ioctl.h  kmem.c  kmem.h  makefile  pciDriver.h  pcibus.h  pcidriver.h  rdma.c  rdma.h  sysfs.c  sysfs.h  umem.c  umem.h
html_server/: html_server.py
html_server/static/: check_err.js
html_server/templates/: base.html  property_info.html  register_info.html
html_server/templates/registers/: table_cell.html  table_header.html  table_scripts.html
ipecamera/: CMakeLists.txt  data.c  data.h  events.c  events.h  image.c  image.h  ipecamera.c  ipecamera.h  model.c  model.h  private.h  public.h  reader.c  reader.h
kapture/: CMakeLists.txt  kapture.c  kapture.h  model.h  private.h
misc/: 50-pcidriver.rules  dkms-postbuild.sh  dkms.conf.in  ipedevices.xml  pcilib.in  pcilib.sysconfig.in  pcilib_api.service.in  pcilib_html.service.in  pcitool.pc.in  rpmlintrc
misc/xml/: format.sh  format.xsl  update_to_new_format.xsl
models/ipecamera/: camera.xml  registers_and_banks.xsd
patches/: pcitool-r221-kmem_writes.diff
pcilib/: CMakeLists.txt  bank.c  bank.h  bar.c  bar.h  build.h.in  config.c  config.h  config.h.in  cpu.c  cpu.h  datacpy.c  datacpy.h  debug.c  debug.h  dma.c  dma.h  env.c  env.h  error.c  error.h  event.c  event.h  export.c  export.h  fifo.c  fifo.h  kmem.c  kmem.h  lock.c  lock.h  locking.c  locking.h  mem.c  mem.h  memcpy.c  memcpy.h  model.c  model.h  pagecpy.c  (+30 more)
pcitool/: CMakeLists.txt  buildinfo.c  buildinfo.h  camera.xml  cli.c  config.txt  formaters.c  formaters.h  registers_and_banks.xsd  sysinfo.c  sysinfo.h
protocols/: CMakeLists.txt  default.c  default.h  property.c  property.h  software.c  software.h  software_registers.c  software_registers.h
pyserver/: api_server.py  html_server.py  pcilib_api_server.py  pcilib_html_server.py
pyserver/scripts/: test_script.py  test_script2.py
pyserver/static/: base.css  check_err.js
pyserver/templates/: base.html  register_info.html  registers_list.html  scripts_info.html
pyserver/templates/registers/: table_cell.html  table_header.html  table_scripts.html
pywrap/: CMakeLists.txt  api_server.py  html_server.py  pcilib.py  pcipywrap.c  pcipywrap.h  pcipywrap.i  server.py  test_pcilib.py  test_pcipywrap.py
pywrap/templates/: base.html  property_info.html  register_info.html  registers_list.html
search/: all_0.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  (+31 more)
tests/: Frame_Req.sh  Reset_Init.sh  Reset_Init_all_reg_10bit.sh  Reset_Init_all_reg_11bit.sh  Reset_Init_all_reg_12bit.sh  add_device.sh  bench.sh  bench3.sh  cleanup.sh  device_info.sh  dump_file.sh  frame.sh  frame2.sh  frame_req.sh  grab.sh  incomplete.sh  loopback-test.sh  new_device.sh  reload.sh  reset_init.sh  run-and-decode-test.sh  stimuli.sh  tb_mic.sh  test-iommu.sh  xilinx_dma.sh
tests/dma/ipe/: bench.sh
tests/dma/nwl/: cleanup.sh
tests/heb/: DataTaking.sh
tests/heb/cfg/: BoardOFF.sh  BoardOn.sh  README  Set_ADC_1_Delay.sh  Set_ADC_2_Delay.sh  Set_ADC_3_Delay.sh  Set_ADC_4_Delay.sh  Set_Default.sh  Set_Delay_chip.sh  Set_FPGA_clock_delay.sh  Set_TH_Delay.sh
tests/heb/debug/: debug.sh  request_data.sh
tests/ipecamera/: Reset_Init_all_reg_10bit.sh  Reset_Init_all_reg_10bit_4Mp.sh  Reset_Init_all_reg_11bit.sh  Reset_Init_all_reg_12bit.sh  bench.sh  frame_req.sh  grab-hwtrigger.sh
tests/ipecamera/cfg/: Reset_Init_all_reg_10bit.sh  Reset_Init_all_reg_11bit.sh
tests/ipecamera/tests/: loopback-test.sh  run-and-decode-test.sh
tests/ipedma/: ipecamera-frame.sh  ipecamera-test.sh  test.sh
tests/nwldma/: bench.sh  cleanup.sh
tests/xilinxdma/: xilinx_dma.sh  xilinx_dma_static_mem.sh
views/: CMakeLists.txt  enum.c  enum.h  register.c  register.h  script.c  script.h  transform.c  transform.h
xml/: CMakeLists.txt  devices.xsd  model.xsd  references.xsd  types.xsd
xml/devices/: testdevice.xml
xml/scripts/: test_script.py  test_script2.py
xml/test/: camera.xml  cmosis.xml  dma.xml  props.xml  test_prop2.py  test_prop3.py  test_prop4.py  test_prop_mt.py
xml/test2/: props.xml  views.xml
xml/test_pywrap/: camera.xml  names.xml  props.xml  test_prop2.py  test_prop3.py  test_prop_mt.py  units.xml
